--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,9 @@
 title: dataPipeline.com.au
 email: contact@datapipeline.com.au
 description: > # this means to ignore newlines until "baseurl:"
-  Official website for dataPipeline.com.au
+  dataPipeline is a wholly Australian owned company, operating in the Ballarat region.
 baseurl: "" # the subpath of your site, e.g. /blog/
+static_url: http://static.datapipeline.com.au
 url: "http://www.datapipeline.com.au" # the base hostname & protocol for your site
 twitter_username: robertlayton
 github_username:  robertlayton
